# kcom-rs

./: .gitignore  Budgeting.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTES.md  README.md  build.rs
benches/: async_benchmark.rs  comparison.cpp  comparison.rs  comparison_async.cpp  comparison_async.rs
docs/: README.md  allocator.md  architecture.md  async.md  benchmarks.md  executor.md  macros.md  safety.md  testing.md  troubleshooting.md  unicode.md
docs_ja/: README.md  allocator.md  architecture.md  async.md  benchmarks.md  executor.md  macros.md  safety.md  testing.md  troubleshooting.md  unicode.md
examples/: declare_com_interface_async.rs  declare_com_interface_inheritance.rs  declare_com_interface_minimal.rs  declare_com_interface_multiple.rs  declare_com_interface_result.rs  driver_entry_stub.rs  kernel_timer_future_driver.rs  spawn_task_host.rs  work_item_task_driver.rs
examples/support/: driver_entry_stub.rs
kcom-tests/: Cargo.toml
kcom-tests/src/: bench_async_com.rs  lib.rs
kcom-tests/tests/: aggregation_spec.rs  async_operation_driver_spec.rs  async_operation_edge_spec.rs  async_operation_spec.rs  basic_smoke_spec.rs  executor_edge_spec.rs  smart_vtable_spec.rs  unicode_edge_spec.rs  wdk_alloc_align_spec.rs
scripts/: test_all.ps1
src/: allocator.rs  async_com.rs  async_com_metrics.rs  descriptors.rs  driver_test_stub.rs  executor.rs  guard_ptr.rs  iunknown.rs  lib.rs  macros.rs  ntddk.rs  refcount.rs  smart_ptr.rs  task.rs  trace.rs  traits.rs  unicode.rs  vtable.rs  wrapper.rs
src/async_com/: fused.rs  pool.rs
src/macros/: declare_interface.rs  helpers.rs  impl_interface.rs  mod.rs
tests/: aggregation_spec.rs  async_operation_driver_spec.rs  async_operation_edge_spec.rs  async_operation_spec.rs  basic_smoke_spec.rs  executor_edge_spec.rs  refcount_edge_spec.rs  trace_spec.rs
