[package]
name = "kcom"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Zero-copy COM runtime for Windows kernel drivers in Rust."
repository = "https://github.com/exveria1015/kcom-rs"
homepage = "https://github.com/exveria1015/kcom-rs"
documentation = "https://docs.rs/kcom"
keywords = ["com", "windows", "kernel", "wdk", "no_std"]
categories = ["os::windows-apis", "no-std"]

[dependencies]
paste = "1"
wdk-sys = { version = "*", optional = true }
async-trait = { version = "0.1", optional = true }

[features]
default = []
async-com = []
async-impl = ["async-com", "async-trait"]
async-com-kernel = ["async-com", "wdk-sys"]
kernel-unicode = ["wdk-sys"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(driver_model__driver_type, values("WDM", "KMDF"))'] }

[package.metadata.docs.rs]
features = ["async-impl", "kernel-unicode"]

[[example]]
name = "declare_com_interface_async"
required-features = ["async-com"]
