[package]
name = "kcom-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
kcom = { path = "..", default-features = false }

[features]
default = []
async-com = ["kcom/async-com"]
async-com-kernel = ["kcom/async-com-kernel"]
async-impl = ["kcom/async-impl"]
kernel-unicode = ["kcom/kernel-unicode"]
driver = ["kcom/driver"]
driver-test-stub = ["kcom/driver-test-stub"]
refcount-hardening = ["kcom/refcount-hardening"]
strict-provenance = ["kcom/strict-provenance"]
wdk-alloc-align = ["kcom/wdk-alloc-align"]
